--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -105,10 +105,10 @@ nl_after_func_body                      = 2             # number
 ## Other
 
 # Remove blank lines after open brace
-eat_blanks_after_open_brace             = false          # boolean (false/true)
+eat_blanks_after_open_brace             = false         # boolean (false/true)
 
 # Remove blank lines before close brace
-eat_blanks_before_close_brace           = false          # boolean (false/true)
+eat_blanks_before_close_brace           = true          # boolean (false/true)
 
 # Code-Modifying
 # --------------
@@ -116,12 +116,19 @@ eat_blanks_before_close_brace           = false          # boolean (false/true)
 ## Braces
 
 # Braces on chained if/elseif/else statements
-mod_full_brace_if_chain                 = false          # boolean (false/true)
+mod_full_brace_if_chain                 = false         # boolean (false/true)
 
-mod_full_brace_if                       = ignore
-mod_full_brace_do                       = ignore
-mod_full_brace_while                    = ignore
-mod_full_brace_for                      = ignore
+# Braces on single-line do statement
+mod_full_brace_do                       = ignore        # string (add/force/ignore/remove)
+
+# Braces on single-line else statement
+mod_full_brace_if                       = ignore        # string (add/force/ignore/remove)
+
+# Braces on single-line for statement
+mod_full_brace_for                      = ignore        # string (add/force/ignore/remove)
+
+# Braces on single-line while statement
+mod_full_brace_while                    = ignore        # string (add/force/ignore/remove)
 
 ## Other
 
@@ -339,13 +346,13 @@ nl_create_while_one_liner               = true          # boolean (false/true)
 nl_after_brace_close                    = false         # boolean (false/true)
 
 # Newline after brace open
-nl_after_brace_open                     = true         # boolean (false/true)
+nl_after_brace_open                     = true          # boolean (false/true)
 
 # Newline after brace open comment
 nl_after_brace_open_cmt                 = false         # boolean (false/true)
 
 # Newline after case statement
-nl_after_case                           = true         # boolean (false/true)
+nl_after_case                           = true          # boolean (false/true)
 
 # Newline after macro multi-line definition
 nl_multi_line_define                    = false         # boolean (false/true)
@@ -376,7 +383,7 @@ nl_before_case                          = false         # boolean (false/true)
 nl_catch_brace                          = remove        # string (add/force/ignore/remove)
 
 # Newline between close brace and catch
-nl_brace_catch                          = add        # string (add/force/ignore/remove)
+nl_brace_catch                          = add           # string (add/force/ignore/remove)
 
 # Newline between close brace and else
 nl_brace_else                           = remove        # string (add/force/ignore/remove)
@@ -415,7 +422,7 @@ nl_for_brace                            = remove        # string (add/force/igno
 nl_fcall_brace                          = remove        # string (add/force/ignore/remove)
 
 # Newline between function signature and open brace
-nl_fdef_brace                           = add           # string (add/force/ignore/remove)
+nl_fdef_brace                           = remove        # string (add/force/ignore/remove)
 
 # Newline between if and open brace
 nl_if_brace                             = remove        # string (add/force/ignore/remove)
@@ -519,6 +526,9 @@ sp_after_oc_colon                       = remove        # string (add/force/igno
 # Space after ObjC message colon
 sp_after_send_oc_colon                  = remove        # string (add/force/ignore/remove)
 
+# Space after ObjC property
+sp_after_oc_property                    = add           # string (add/force/ignore/remove)
+
 # Space after ObjC return type
 sp_after_oc_return_type                 = remove        # string (add/force/ignore/remove)
 
@@ -527,9 +537,6 @@ sp_after_oc_scope                       = force         # string (add/force/igno
 
 # Space after ObjC type
 sp_after_oc_type                        = remove        # string (add/force/ignore/remove)
-
-# Add or remove space after @property.
-sp_after_oc_property                    = add   # ignore/add/remove/force
 
 # Space after cast
 sp_after_cast                           = remove        # string (add/force/ignore/remove)
